samples/_failures_safe/1761166382_2142e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfdbdf16.c: In function ‘main’:
./samples/SAFE/__tmp_cfdbdf16.c:164:19: error: expected ‘)’ at end of input
  164 |         if (strcmp
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_cfdbdf16.c:164:9: error: expected declaration or statement at end of input
  164 |         if (strcmp
      |         ^~
./samples/SAFE/__tmp_cfdbdf16.c:164:9: error: expected declaration or statement at end of input
